2 Local Kubernetes/landing.yaml
# 1. Import the nginx ingress controller
# `kubectl apply -f https://raw.githubusercontent.com/kubernetes/ingress-nginx/controller-v1.5.1/deploy/static/provider/cloud/deploy.yaml`

# 2. Apply yaml files
# `kubectl apply -f .`

# 3. Modify /etc/hosts to add `alinefinancial.com` to localhost.

# 4. Landing should be accessible at 
# `alinefinancial.com`
---
apiVersion: v1
kind: Namespace
metadata:
  name: aline
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: landing-deployment
  namespace: aline
spec:
  replicas: 1
  selector:
    matchLabels:
      aline.component: client
  template:
    metadata:
      labels:
        aline.component: client
    spec:
      containers:
      - name: landing
        image: lyndasm/aline-landing
        ports:
          - containerPort: 4200
        resources: {}
---
apiVersion: v1
kind: Service
metadata:
  name: client-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    aline.component: client
  ports:
  - name: landing-port
    protocol: TCP
    port: 4200
    targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
  namespace: aline
spec:
  rules:
    - host: alinefinancial.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: client-cluster-ip-service
                port:
                  number: 80
